--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   <!-- css sheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/ea4cb5c580.js" crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
 
-        <a class="navbar-brand" href=""><img class="company-logo"src="images/company-logo.png" alt="company-logo"></a>
+        <a class="navbar-brand" href=""><img class="company-logo"src="company-logo.png" alt="company-logo"></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button> -->
         </div>
         <div class="col-lg-6">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="iphone6.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -103,28 +103,28 @@
     <div id="testimonial-corousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="testimonial-img" src="images/bobby.jpg" alt="bobby-img">
+          <img class="testimonial-img" src="bobby.jpg" alt="bobby-img">
           <h2 class="testimonial-text">I often deal with the 2D drafting part all designs which have to be developed. Fast & Efficient output is my objective.</h2>
           <em class="testimonial-name">B. Susanth<br>Design & Drafting Specialist</em>.
 
         </div>
         <div class="carousel-item">
-          <img class="testimonial-img" src="images/madan.jpg" alt="madan-img">
+          <img class="testimonial-img" src="madan.jpg" alt="madan-img">
           <h2 class="testimonial-text">I concentrate on 3D modelling and development division and also coordinate with both Design & Simulation departments.</h2>
           <em class="testimonial-name">A. Madan Mohan Reddy<br>3D Modelling & Development Specialist</em>.
         </div>
         <div class="carousel-item">
-          <img class="testimonial-img" src="images/naveen.jpg" alt="naveen-img">
+          <img class="testimonial-img" src="naveen.jpg" alt="naveen-img">
           <h2 class="testimonial-text">I support the Design & Modelling Departments. I always ensure that the design to be perfect and well organized.</h2>
           <em class="testimonial-name">K. Naveen Kumar<br>3D Modelling & Development Specialist</em>.
         </div>
         <div class="carousel-item">
-          <img class="testimonial-img" src="images/vijay.jpg" alt="vijay-img">
+          <img class="testimonial-img" src="vijay.jpg" alt="vijay-img">
           <h2 class="testimonial-text">I handle the Analysis & Simluation part along with that i plan the overall works and structure them to be in the most productive way.</h2>
           <em class="testimonial-name">S. Vijaydharan<br>Analysis & Simluation Specialist</em>.
         </div>
         <div class="carousel-item">
-          <img class="testimonial-img" src="images/sudheer.jpg" alt="sudheer-img">
+          <img class="testimonial-img" src="sudheer.jpg" alt="sudheer-img">
           <h2 class="testimonial-text">I handle the managing & marketing divisions along with that i coordinate with the remaining Design & Simluation divisions.</h2>
           <em class="testimonial-name">K.P. Sudheer<br>Analysis & Simluation Specialist</em>.
         </div>
@@ -234,11 +234,11 @@
 
   <footer id="footer">
     <a href="#"><i class=" social-icon fab fa-twitter fa-2x"></i></a>
-    <a href="#"><i class=" social-icon fab fa-linkedin fa-2x"></i></a>
-    <a href="#"><i class=" social-icon fab fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/design-desks-9661bb21a"><i class=" social-icon fab fa-linkedin fa-2x"></i></a>
+    <a href="https://github.com/Design-Desks"><i class=" social-icon fab fa-github fa-2x"></i></a>
     <a href="mailto:designs.desks@gmail.com"><i class=" social-icon fas fa-envelope fa-2x"></i></a>
 
-    <p>© Copyright 2021 LAB's</p>
+    <p>© Copyright 2021 Design-Desks</p>
 
   </footer>
 
