--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   <section id="services">
 
-    <h2>Services Which We Work On</h2>
+    <h2>Services Which We Offer</h2>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
 
